# ctef

./: LICENSE.md  README.md  ctef.py  example.py  pyproject.toml  setup.py  simulate.py  vmf.py
clustering/: compare.py
ctef/: __init__.py  ctef.py  ctef_clustering.py
examples/: cell_cycle.py  clustering.py  ellipsoid_gaussian.ipynb  ellipsoid_gaussian.py  rosenbrock.py
examples/cell_cycle/: 40.npy  cell_cycle.py  fit.npy
examples/clustering/: compare.py
examples/datasets/: cell_phase.npy
examples/ellipsoid_gaussian/: ellipsoid_gaussian.py  helpers.py
examples/rosenbrock/: .RData  .Rhistory  train.csv
src/: ctef.py
tests/: fit2d.py
