[tool.poetry]
name = "ctef"
version = "0.1.0"
description = "Cayley transform ellipsoid fitting"
authors = ["Omar Melikechi <omar.melikechi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
